--- a/brb.test.cxfrs/pom.xml
+++ b/brb.test.cxfrs/pom.xml
@@ -8,6 +8,13 @@
 	<name>brb.test.cxfrs Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
+	<repositories>
+		<repository>
+			<id>id1</id>
+			<url>http://repo.maven.apache.org/maven2</url>
+		</repository>
+	</repositories>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -29,12 +36,11 @@
 			<artifactId>cxf-bundle-jaxrs</artifactId>
 			<version>2.7.18</version>
 		</dependency>
+		<!-- <dependency> <groupId>org.apache.cxf</groupId> <artifactId>cxf-spring-boot-starter-jaxrs</artifactId> 
+			<version>3.1.7</version> </dependency> -->
 
-		<!-- <dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>javax.servlet-api</artifactId> 
+			<version>3.1.0</version> </dependency> -->
 	</dependencies>
 
 	<build>
