--- a/brb.test.cxfrs/pom.xml
+++ b/brb.test.cxfrs/pom.xml
@@ -27,8 +27,11 @@
 
 	<dependencies>
 
-		<!-- <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-servlet</artifactId> 
-			<version>${jersey.version}</version> </dependency> -->
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-servlet</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-bundle-jaxrs -->
 		<dependency>
