--- a/brb.test.cxfrs/src/main/webapp/WEB-INF/web.xml
+++ b/brb.test.cxfrs/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,7 @@
 			<param-name>jaxrs.serviceClasses</param-name>
 			<param-value>brb.research.rest.Service</param-value>
 		</init-param>
+		<async-supported>true</async-supported>
 	</servlet>
 
 	<servlet-mapping>
